--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
@@ -216,7 +216,7 @@
              <div class="col-md-12">
             <div class="row" align="center">
                   <a href="#" th:href="@{/diagnosticocapacitaciones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a> 
-                            <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                            <button type="submit" id="guardar" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                             <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
             </div>
         </div>
@@ -251,7 +251,12 @@
 
 <script th:inline="javascript">
     $(document).ready(function () {
-    if ([[${msg}]] === 0){
+       $('#guardar').click(function(){
+                    $("#loader").addClass("loader");
+                    });
+        if ([[${msg}]] === 0){
+                       $("#loader").addClass("loader");
+     
     swal({
     title: "Exito!",
             text: "Registro agregado correctamente",
