--- a/src/main/resources/templates/fragments/empleado/empleadoshow.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshow.html
@@ -946,6 +946,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
              
         $(document).ready(function () {
     if([[${msg}]]===3){
+         $("#loader").addClass("loader");
+                   
        swal({
            
                 title: "Exito!",
