--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -246,7 +246,7 @@
                     <div class="col-md-12">
                         <div class="row" align="center">
                            <a href="#" th:href="@{/capacitaciones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
-                            <button type="submit"  onclick="fecha_format();"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                            <button type="submit"  id="guardar"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                             <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
                         
                         </div>
@@ -264,7 +264,12 @@
     </div>  
     <script th:inline="javascript">
     $(document).ready(function () {
+        $('#guardar').click(function(){
+                    $("#loader").addClass("loader");
+                    });
+        
     if([[${msg}]]===0){
+                    $("#loader").addClass("loader");
        swal({
                 title: "Exito!",
                 text: "Registro agregado correctamente",
@@ -272,10 +277,7 @@
                 icon: "success"
        }).then(function() {
                 location.href = '../capacitaciones/';
-                swal({
-       text: "Redirigiendo a consulta de capacitaciones",
-       icon: "success"
-    })
+                
        }); 
 }
     
