--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -73,7 +73,7 @@
                         <div class="form-group">
                             <label class="col-sm-4 control-label">Numero de acuerdo comité(*):</label>
                             <div class="col-sm-2">
-                                <input type="text" class="form-control numeros" required="true"   th:field="*{numeroacuerdocomite}"/>
+                                <input type="text" class="form-control numeros" maxlength="14" required="true"   th:field="*{numeroacuerdocomite}"/>
                             </div>
                             <div class="popup col-sm-1"><b>
                                     <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('acuerdo')" onmouseout ="javascript:ocultarAyuda('acuerdo')">a</a></b>
@@ -122,7 +122,7 @@
                         <div class="col-md-12">
                             <div class="row" align="center">
                                  <a href="#" th:href="@{/comites/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
-                                <button type="submit"  onclick="fecha_format();"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                                <button type="submit"  id="guardar"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                                 <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
                             </div>
                         </div>
@@ -141,6 +141,9 @@
 
     <script th:inline="javascript">
         $(document).ready(function () {
+               $('#guardar').click(function(){
+                    $("#loader").addClass("loader");
+                    });
         if ([[${msg}]] === 0){
         swal({
         title: "Exito!",
