--- a/src/main/resources/templates/fragments/empleado/empleadoform.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoform.html
@@ -471,7 +471,7 @@
 
                  <a href="#" th:href="@{/empleados/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
 
-                <button type="submit"  onclick="fecha_format();"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                <button type="submit" id="guardar"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                 <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
                 <br><br>
             </div>
@@ -529,6 +529,9 @@
                     }
 		
 		$(document).ready(function () {
+                    $('#guardar').click(function(){
+                    $("#loader").addClass("loader");
+                    });
 		    var date = new Date();
 		    var currentMonth = date.getMonth();
 		    var currentDate = date.getDate();
@@ -617,6 +620,7 @@
          <script th:inline="javascript">
     $(document).ready(function () {
     if([[${msg}]]===0){
+        $("#loader").addClass("loader");
        swal({
                 title: "Exito!",
                 text: "Registro agregado correctamente",
@@ -624,10 +628,6 @@
                 icon: "success"
        }).then(function() {
                  location.href = '../empleados/';
-                 swal({
-                text: "Redirigiendo a consulta de empleados",
-                icon: "success"
-                })
        }); 
 }
     
