--- a/src/main/resources/templates/fragments/empleadocapacitacion/empleadocapacitacionform.html
+++ b/src/main/resources/templates/fragments/empleadocapacitacion/empleadocapacitacionform.html
@@ -38,7 +38,7 @@
                         <div class="row" align="center">
                              <a href="#" th:href="@{/empleadocapacitaciones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
                                <!--<a href="#" th:href="@{/empleadocapacitaciones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>-->  
-                            <button type="submit" onclick="fecha_format();"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Asignar</button>
+                            <button type="submit" id="guardar"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Asignar</button>
                                <!--<button type="submit" class="btn btn-default">Agregar</button>-->
                             <button type="reset" class="btn btn-default">Limpiar</button>
                          </div>
@@ -67,20 +67,21 @@
  </body>
 <script th:inline="javascript">
     $(document).ready(function () {
+           $('#guardar').click(function(){
+                    $("#loader").addClass("loader");
+                    });
+    
     if ([[${msg}]] === 0){
-    swal({
+                   $("#loader").addClass("loader");
+     swal({
     title: "Exito!",
             text: "Registro agregado correctamente",
             type: "success",
             icon: "success"
     }).then(function() {
     location.href = '../empleadocapacitaciones/';
-    swal({
-                text: "Redirigiendo a consulta de empleados",
-                icon: "success"
-                })
     });
-    }
+}
      if ([[${msg}]] === 1){
     swal({
     title: "ERROR!",
@@ -90,5 +91,6 @@
     });
     }
     });
+    
 </script> 
  </html>
