--- a/src/main/resources/templates/fragments/formacionacademica/formacionacademicaform.html
+++ b/src/main/resources/templates/fragments/formacionacademica/formacionacademicaform.html
@@ -184,7 +184,7 @@
                 <button type="submit" class="btn btn-default" id="btnGuardar">Guardar</button>
                 <button type="reset" class="btn btn-default">Limpiar</button>-->
  <a href="#" th:href="@{/empleados/show/}+${empleado.codigoempleado}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
-<button type="submit"  onclick="fecha_format();"  class="btn btn-success" id="btnGuardar"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+<button type="submit" class="btn btn-success" id="btnGuardar"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
 <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
 
             </div>
@@ -219,7 +219,8 @@
                         }
                     }		
 		$(document).ready(function () {
-		    var date = new Date();
+                   
+                    var date = new Date();
 		    var currentMonth = date.getMonth();
 		    var currentDate = date.getDate();
 		    var currentYear = date.getFullYear();
@@ -297,6 +298,7 @@
 		    });
 		});
                 $('#btnGuardar').click(function(){
+                     $("#loader").addClass("loader");
             $("#formformacion").attr('action', '../formacionacademica/'+ $("#codem").val().toString());
             $("form#formformacion").submit();
             
@@ -306,6 +308,8 @@
          <script th:inline="javascript">
     $(document).ready(function () {
     if([[${msg}]]===0){
+         $("#loader").addClass("loader");
+                   
        swal({
                 title: "Exito!",
                 text: "Registro agregado correctamente",
@@ -313,10 +317,7 @@
                 icon: "success"
        }).then(function() {
                  location.href = '../../empleados/';
-                 swal({
-                text: "Redirigiendo a consulta de empleados",
-                icon: "success"
-                })
+                 
        }); 
 }
     
