--- a/src/main/resources/templates/fragments/mision/misionform.html
+++ b/src/main/resources/templates/fragments/mision/misionform.html
@@ -364,7 +364,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="col-md-12">
                            <div class="row" align="center">
                                <a href="#" th:href="@{/misiones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
-<button type="submit" onclick="fecha_format();" class="btn btn-success" ><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+<button type="submit" id="guardar" class="btn btn-success" ><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
 <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
 
 <!--                               <button type="button" class="btn btn-default"><a href="#" th:href="@{/misiones/}">Regresar</a></button>
@@ -536,7 +536,12 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 	</script>
         <script th:inline="javascript">
       $(document).ready(function () {
+           $('#guardar').click(function(){
+                    $("#loader").addClass("loader");
+                    });
     if([[${msg}]]===0){
+        $("#loader").addClass("loader");
+                    
        swal({
                 title: "Exito!",
                 text: "Registro agregado correctamente",
