--- a/src/main/resources/templates/fragments/usuariorol/usuariorolshow.html
+++ b/src/main/resources/templates/fragments/usuariorol/usuariorolshow.html
@@ -12,6 +12,9 @@
 <div class="container">
     <h2>Datos de Usuario</h2>
         <div>
+            <div class="row text-center">
+                        <img src="../../static/image/images.jpeg" width="100" th:src="@{/image/images.jpeg}"/>
+                    </div>
             <form class="form-horizontal">
                 
                 <div class="form-group">
