estado de capacitaciones

--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -219,11 +219,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 <script th:inline="javascript">
     Textheader('pnt_ccap',document.title);
     $(document).ready(function () {
-         $('#guardar').click(function(){
-                    $("#loader").addClass("loader");
-                    });
+//         $('#guardar').click(function(){
+//                    $("#loader").addClass("loader");
+//                    });
     if([[${msg}]]===0){
-         $("#loader").addClass("loader");
+//         $("#loader").addClass("loader");
        swal({
                 title: "Exito!",
                 text: "Registro agregado correctamente",
