--- a/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadform.html
+++ b/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadform.html
@@ -178,7 +178,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 <script src="../static/css/hydro/js/jquery.js"></script>
 	<script>
             function fechaNac(val,id){
-                        var foo=FechaNacimiento(val,id).split(",");;
+                        var foo=FechaNacimientoh(val,id).split(",");;
                         if(foo[0]!=foo[2]){
                             swal(foo[1], foo[0]);
                         }
