--- a/src/main/resources/templates/fragments/empleado/empleadoshow.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshow.html
@@ -527,7 +527,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<td th:text="${experiencialaboral.nombreinstitucion}">nombreinstitucion</td>
 															<td th:text="${#calendars.format(experiencialaboral.fechadesdeexperiencialaboral, 'dd/MM/yyyy')}	">fechadesdeexperiencialaboral</td>   
 															<td th:text="${#calendars.format(experiencialaboral.fechahastaexperiencialaboral, 'dd/MM/yyyy')}	">fechahastaexperiencialaboral</td>   
-															<td th:text="${experiencialaboral.salarioinicial}">salarioinicial</td> 
+															<td th:text="${#numbers.formatDecimal(experiencialaboral.salarioinicial, 0, 'COMMA', 2, 'POINT')} ">salarioinicial</td> 
 															<td th:text="${experiencialaboral.sectorexperiencialaboral}">sectorexperiencialaboral</td> 															
 															<td><a th:href="${'../../experiencialaborales/show/' + experiencialaboral.codigoexperiencialaboral}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
 															<td><a th:href="${'../../experiencialaborales/edit/' + experiencialaboral.codigoexperiencialaboral}+'/'+${empleado.codigoempleado}" class="btn btn-success">Editar</a></td>
@@ -571,7 +571,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Listado de bicaciones físicas</h3>
+															<h3 align="center">Listado de ubicaciones físicas</h3>
 															<table id="tablita5" class="table table-striped table-bordered" >
 															<thead>
 															<tr >
@@ -649,7 +649,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<td th:text="${contrato.codigocontrato}">codigocontrato</td>
 															<td th:text="${#calendars.format(contrato.fechainiciocontrato, 'dd/MM/yyyy')}	">fechainiciocontrato</td>
 															<td th:text="${#calendars.format(contrato.fechafincontrato, 'dd/MM/yyyy')}	">fechafincontrato</td>   
-															<td th:text="${contrato.salarioactual}">salarioactual</td>  
+															<td th:text="${#numbers.formatDecimal(contrato.salarioactual, 0, 'COMMA', 2, 'POINT')}">salarioactual</td>  
                                                                                                                          <td><a  class="btn btn-danger" th:onclick="'descargapdfc(\'' + ${contrato.codigocontrato} + '\');'" >Descargar acuerdo</a></td>
 															<td><a th:href="${'../../contratos/show/' + contrato.codigocontrato}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
 															<td><a th:href="${'../../contratos/edit/' + contrato.codigocontrato}+'/'+${empleado.codigoempleado}" class="btn btn-success">Editar</a></td>
