--- a/src/main/resources/templates/fragments/mision/misionshow.html
+++ b/src/main/resources/templates/fragments/mision/misionshow.html
@@ -61,25 +61,25 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                      <div class="form-group">
                     <label class="col-sm-5 control-label">Viaticos de Misi&oacute;n:</label>
                     <div class="col-sm-7">
-                        <p class="form-control-static" th:text="${mision.viaticos}">Responsable Gasto</p>
+                        <p class="form-control-static" th:text="${#numbers.formatDecimal(mision.viaticos, 0, 'COMMA', 2, 'POINT')}">Responsable Gasto</p>
                     </div>
                 </div>
                      <div class="form-group">
-                    <label class="col-sm-5 control-label">Gasto viaje:</label>
+                    <label class="col-sm-5 control-label">Gastos de viaje:</label>
                     <div class="col-sm-7">
-                        <p class="form-control-static" th:text="${mision.gastoviaje}">Responsable Gasto</p>
+                        <p class="form-control-static" th:text="${#numbers.formatDecimal(mision.gastoviaje, 0, 'COMMA', 2, 'POINT')} ">Responsable Gasto</p>
                     </div>
                 </div>
-                       <div class="form-group">
+<!--                       <div class="form-group">
                     <label class="col-sm-5 control-label">Gastos de viaje</label>
                     <div class="col-sm-7">
                         <p class="form-control-static" th:text="${mision.gastoviaje}">Gasto Viaje</p>
                     </div>
-                </div>
+                </div>-->
                        <div class="form-group">
                     <label class="col-sm-5 control-label">Gastos terminales</label>
                     <div class="col-sm-7">
-                        <p class="form-control-static" th:text="${mision.gastoterminales}">Gasto Viaje</p>
+                        <p class="form-control-static" th:text="${#numbers.formatDecimal(mision.gastoterminales, 0, 'COMMA', 2, 'POINT')}">Gasto Viaje</p>
                     </div>
                 </div>
                      <div class="form-group">
